--- a/css/Blog.css
+++ b/css/Blog.css
@@ -87,7 +87,7 @@
     align-items: center;
     margin: 10px 0px;
     flex-wrap: wrap;
-
+    background: #333;
 }
 #list_blog .comment_blog {
     grid-column: span 1;
